--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "core digitalDream application ",
   "main": "server.js",
   "scripts": {
-    "start:dev": "nodemon ./src/server.js",
+    "start:dev": "nodemon --watch 'src/' --exec \"ts-node src/entry.ts\" -e ts",
     "test": "test"
   },
   "author": "joannis",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/express": "^4.17.4",
+    "ts-node": "^8.8.1",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
