--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.4",
+    "express": "^4.17.1",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "jest": "^25.2.6",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   }
 }
