--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.4",
+    "mongoose": "^5.9.7",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/body-parser": "0.0.33",
     "@types/morgan": "^1.7.32",
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "install": "^0.13.0",
     "jest": "^25.2.6",
-    "morgan": "^1.7.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
     "npm": "^6.14.4",
     "supertest": "^4.0.2"
